[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemies/Aphid/Aphid.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/Aphid/AphidPath.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Aphid/AphidPathWithAphid.gd" type="Script" id=3]

[sub_resource type="Curve2D" id=1]
resource_local_to_scene = true
_data = {
"points": PoolVector2Array(  )
}

[node name="AphidPathWithAphid" type="YSort"]
script = ExtResource( 3 )

[node name="AphidPath" type="Path2D" parent="."]
curve = SubResource( 1 )
script = ExtResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="AphidPath"]
position = Vector2( -126.32, -0.0480042 )
rotate = false
loop = false

[node name="Mother" type="Node2D" parent="AphidPath/PathFollow2D"]

[node name="Timer" type="Timer" parent="AphidPath"]
one_shot = true

[node name="Tween" type="Tween" parent="AphidPath"]

[node name="Aphid" parent="." instance=ExtResource( 1 )]
mother_path = NodePath("../AphidPath/PathFollow2D/Mother")

[connection signal="timeout" from="AphidPath/Timer" to="AphidPath" method="_on_Timer_timeout"]
[connection signal="tween_all_completed" from="AphidPath/Tween" to="AphidPath" method="_on_Tween_tween_all_completed"]
